build/usd-sys/usd-c/include.in/pxr/usd/pcp/pcp_dynamic_file_format_dependency_data.h

#pragma once
#include "usd-api-export.h"

#include <stdbool.h>

#ifdef __cplusplus
extern "C" {
#endif

typedef struct pxrInternal_v0_21__pxrReserved____TfToken_t_s pxrInternal_v0_21__pxrReserved____TfToken_t;
typedef pxrInternal_v0_21__pxrReserved____TfToken_t pxr_TfToken_t;
typedef struct pxrInternal_v0_21__pxrReserved____VtValue_t_s pxrInternal_v0_21__pxrReserved____VtValue_t;
typedef pxrInternal_v0_21__pxrReserved____VtValue_t pxr_VtValue_t;

/** \class PcpDynamicFileFormatDependencyData

Contains the necessary information for storing a prim index's dependency
on dynamic file format arguments and determining if a field change affects
the prim index. This data structure does not store the prim index or its 
path itself and is expected to be the data in some other data structure
that maps prim indexes to its dependencies. */
typedef struct pxrInternal_v0_21__pxrReserved____PcpDynamicFileFormatDependencyData_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____PcpDynamicFileFormatDependencyData_t;
typedef pxrInternal_v0_21__pxrReserved____PcpDynamicFileFormatDependencyData_t pxr_PcpDynamicFileFormatDependencyData_t;


/** Default constructor. This data will be empty. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpDynamicFileFormatDependencyData_ctor(
    pxr_PcpDynamicFileFormatDependencyData_t * * this_);
#define pxr_PcpDynamicFileFormatDependencyData_ctor pxrInternal_v0_21__pxrReserved____PcpDynamicFileFormatDependencyData_ctor


/** Copy constructor. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpDynamicFileFormatDependencyData_copy(
    pxr_PcpDynamicFileFormatDependencyData_t * * this_
    , pxr_PcpDynamicFileFormatDependencyData_t const * rhs);
#define pxr_PcpDynamicFileFormatDependencyData_copy pxrInternal_v0_21__pxrReserved____PcpDynamicFileFormatDependencyData_copy


/** Copy assignment operator */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpDynamicFileFormatDependencyData__assign(
    pxr_PcpDynamicFileFormatDependencyData_t * this_
    , pxr_PcpDynamicFileFormatDependencyData_t * * return_
    , pxr_PcpDynamicFileFormatDependencyData_t const * rhs);
#define pxr_PcpDynamicFileFormatDependencyData__assign pxrInternal_v0_21__pxrReserved____PcpDynamicFileFormatDependencyData__assign


/** Swap the contents of this dependency data with \p rhs. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpDynamicFileFormatDependencyData_Swap(
    pxr_PcpDynamicFileFormatDependencyData_t * this_
    , pxr_PcpDynamicFileFormatDependencyData_t * rhs);
#define pxr_PcpDynamicFileFormatDependencyData_Swap pxrInternal_v0_21__pxrReserved____PcpDynamicFileFormatDependencyData_Swap


/** Same as Swap(), but standard name. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpDynamicFileFormatDependencyData_swap(
    pxr_PcpDynamicFileFormatDependencyData_t * this_
    , pxr_PcpDynamicFileFormatDependencyData_t * rhs);
#define pxr_PcpDynamicFileFormatDependencyData_swap pxrInternal_v0_21__pxrReserved____PcpDynamicFileFormatDependencyData_swap


/** Returns whether this dependency data is empty. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpDynamicFileFormatDependencyData_IsEmpty(
    pxr_PcpDynamicFileFormatDependencyData_t const * this_
    , _Bool * return_);
#define pxr_PcpDynamicFileFormatDependencyData_IsEmpty pxrInternal_v0_21__pxrReserved____PcpDynamicFileFormatDependencyData_IsEmpty


/** Given a \p field name and the changed field values in \p oldAndNewValues
this return whether this change can affect any of the file format 
arguments generated by any of the contexts stored in this dependency. */
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpDynamicFileFormatDependencyData_CanFieldChangeAffectFileFormatArguments(
    pxr_PcpDynamicFileFormatDependencyData_t const * this_
    , _Bool * return_
    , pxr_TfToken_t const * fieldName
    , pxr_VtValue_t const * oldValue
    , pxr_VtValue_t const * newValue);
#define pxr_PcpDynamicFileFormatDependencyData_CanFieldChangeAffectFileFormatArguments pxrInternal_v0_21__pxrReserved____PcpDynamicFileFormatDependencyData_CanFieldChangeAffectFileFormatArguments


USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____PcpDynamicFileFormatDependencyData_dtor(
    pxr_PcpDynamicFileFormatDependencyData_t * this_);
#define pxr_PcpDynamicFileFormatDependencyData_dtor pxrInternal_v0_21__pxrReserved____PcpDynamicFileFormatDependencyData_dtor


#ifdef __cplusplus
}
#endif